website/docs/v0.17.0/en/concepts/architecture.mdx
---
title: Architecture and authority boundaries
description: Follow a page observation into typed execution, human authorization, source repair, and fresh evidence.
---

:::warning Release candidate
v0.17.0 is staged on main but not published. Installation examples remain pinned to v0.16.2 until the release gate is intentionally advanced.
:::

# Architecture and authority boundaries

A3S Test separates a test into four independently checkable responsibilities. The surface supplies facts, a planner chooses an action, the execution core decides whether that action is allowed, and evidence records what happened. Models may suggest locations or design changes, but only explicit authorization can send a suggestion into repair.

## Two planning entries, one execution core

```text
Calling coding agent                  Closed ACL suite
  observe → decide → one action         admit → execute → assert
              \                         /
                 typed A3S Test Core
          Action · Session · Policy · Lifecycle
                           |
                Web · GUI · TUI adapters
                           |
             events · evidence · JSON · cleanup
```

The core does not depend on a browser, desktop perception, terminal emulation, CLI, or concrete LLM provider. It defines typed actions, observations, sessions, policy, results, and lifecycle. Injected adapters own concrete runtimes.

## Understanding happens after rendering

The browser already computes DOM structure, accessibility semantics, CSS layout, stacking, scrolling, and viewports. Replacing that renderer with another perception system would discard exact facts. Embedded Test Kit instead derives a bounded projection after rendering.

```text
browser render
  ├── accessibility tree ── roles, names, and native state
  ├── Page Context ───────── component ownership, locators, geometry, product facts
  └── UI understanding ───── style profile, layout graph, repeated structures,
                              overflow/clipping, states, timelines and motion
                                      |
                                      v
                          one revision-bound observation
```

Page Context protocol `a3s.test.page-context/1` owns component boundaries, bounded source hints, multi-space geometry, visual viewport state, controlled product facts, and human repair context. Its optional nested `a3s.test.ui-understanding/1` record adds browser-computed visual facts: observed design tokens, Flex/Grid/flow and stacking relationships, exact client/scroll extents with derived clipping state, resolved physical box-model edges with writing direction, deterministic repeated-structure fingerprints, real interaction-state differences, and timeline-aware motion evidence.

The accessibility tree remains the semantic source of truth. UI understanding is neither another accessibility tree nor a screenshot model, and it cannot click, pass a test, claim product intent, or authorize a repair. Screenshots remain A3S Test-owned evidence; model interpretation is an optional advisory layer for surfaces such as canvas or remote desktops that lack useful DOM semantics.

Page context never mutates the host DOM. Private node IDs live in a `WeakMap`, and mutation, resize, route, viewport, scroll, and form-state signals advance a monotonic page revision. Transient focus, hover, or animation state uses a separate UI `observationId`. A3S Test admits the accessibility snapshot, page revision, viewport, scope, protocol, and bounded UI evidence together or rejects the race.

Public observations never expose those private node IDs. A uniquely actionable node uses the same observation-bound `@cN` ref in Page Context and UI evidence; layout-only evidence uses a read-only `@uN` ref. `@uN` preserves inspectable style, layout, state, and motion relationships but is rejected as an action target. If projection cannot preserve the admitted byte budget and graph integrity, A3S Test omits the optional UI evidence instead of leaking an internal identity.

## Four authority layers

1. **Deterministic facts**: driver observations, Test Kit context, file digests, local assertions, and evidence.
2. **Model advice**: visual grounding, design audit, and source-to-contract candidates with provenance, budget, and confidence.
3. **Human authorization**: target confirmation, candidate selection, conflict decisions, and single or batch repair submission.
4. **Repair execution**: the workspace-owning coding agent edits source and A3S Test verifies it in a fresh browser.

Model output cannot decide a verdict, claim browser-observed state, or authorize workspace mutation. Projecting a report into the overlay never changes the runner result.

## Runtime ownership

Every launched program belongs to a process group, Windows Job, or equivalent owned tree created by A3S Test. Cancellation and timeout kill and reap the complete tree. Graceful shutdown is bounded and retains an emergency path. A3S Test never closes unrelated developer browser sessions.

Web sessions use an isolated namespace and non-zero idle timeout. Evidence paths must resolve to fresh regular files inside the session artifact root. GUI and TUI adapters carry the same exact-ownership requirement.

## Surface adapters

| Surface | Current boundary                                                                                                                                                   |
| ------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------ |
| Web     | A3S Browser or a compatible standalone browser. Persistent agent sessions, ACL, semantic refs, evidence, and isolated network policy.                              |
| GUI     | Contract-tested on macOS through locked A3S CUA `0.10.0`. Release workflow verifies permissions, both perception profiles, and exact cleanup on a real arm64 host. |
| TUI     | Native PTY / ConPTY, bounded VT semantics, and an owned command process tree. Currently driven through ACL suites.                                                 |

## Deployment-owned providers

Provider protocols define data exchange only. They do not bundle model weights or select backends with raw strings in public APIs. Deployments inject typed implementations and own model licensing, privacy, capacity, and runtime.

The HTTP adapters disable redirects and environment proxies, require HTTPS except for explicit loopback HTTP, bound request and response bodies, enforce transport and wire deadlines, and redact authorization values from errors. The surrounding services still verify identity, provenance, geometry, usage, and authority independently.
